# Production-Research-RAG

./: .env.example  .gitignore  AGENTS.md  README.md  ROADMAP.md  app.py  main.py  progress.md  pyproject.toml
configs/: config.yaml
notebooks/: generate.ipynb  ingest.ipynb
scripts/: run_generation.py  run_ingestion.py
src/: constants.py  generation_flow.py  ingestion_flow.py  run_ingestion.py
src/generation_steps/: __init__.py  format_context.py  generate_answer.py  retrieve.py
src/ingestion_steps/: __init__.py  clean_chunks.py  create_documents.py  embed.py  parse_and_chunk.py  upsert_to_pinecone.py
src/prompts/: __init__.py  rag.py
src/ui/: chat.py  file_manager.py  state.py
src/utils/: ingest_config.py
