[project]
name = "hybridrag-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.65.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-unstructured>=1.0.1",
    "ml-collections>=1.1.0",
    "openai>=2.24.0",
    "pandas>=2.3.3",
    "pdfminer>=20191125",
    "pinecone>=8.1.0",
    "pinecone-text>=0.11.0",
    "prefect>=3.6.20",
    "pydantic>=2.12.5",
    "pypdfium>=0.0.15",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "streamlit>=1.54.0",
    "tiktoken>=0.12.0",
    "unstructured-client>=0.42.10",
]
